--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@ body {
   ---color-highlight-1: #6DF4FE;
   ---color-highlight-2: #D782B1;
   ---color-text: #D9D9D9;
+  ---color-text-2: #959595;
   ---color-dark-transparent: rgba(0,0,0,0.8);
 
   /* Font Size */
@@ -24,6 +25,7 @@ body {
   /* Spacing */
   /* TODO: Figure out what size gaps should be when on different screen sizes */
   ---spacing-from-edge: 20px;
+  ---spacing-micro: 5px;
   ---spacing-tiny: 5px;
   ---spacing-small: 10px;
   ---spacing-medium: 20px;
@@ -97,6 +99,7 @@ code {
     ---font-size-small: 12px;
 
     ---spacing-from-edge: 5%;
+    ---spacing-micro: 5px;
     ---spacing-tiny: 10px;
     ---spacing-small: 20px;
     ---spacing-medium: 40px;
