Add hover styles to top bar items and button filters

--- a/src/components/projectListPage/ProjectListPage.css
+++ b/src/components/projectListPage/ProjectListPage.css
@@ -21,6 +21,11 @@
     padding: 0;
 }
 
+.filterButton:hover{
+    cursor: pointer;
+    filter: brightness(0.8);
+}
+
 .filterButton.selected{
     text-decoration: underline;
 }
