--- a/src/components/content/ContentAndFooter.css
+++ b/src/components/content/ContentAndFooter.css
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  max-width: 100%;
+  width: 100%;
 }
 .pageTitle {
   /* background-color: var(---color-background); */
