--- a/src/components/projectList/ProjectList.css
+++ b/src/components/projectList/ProjectList.css
@@ -1,6 +1,7 @@
 .projectList {
   display: grid;
   row-gap: var(---spacing-large);
+  width: 100%;
 }
 
 @media only screen and (min-width: 601px){
