--- a/src/components/javascriptPageShow/JavascriptPageShow.css
+++ b/src/components/javascriptPageShow/JavascriptPageShow.css
@@ -19,37 +19,38 @@
   width: 100%;
   font-size: var(---font-size-large-x);
   color: var(---color-highlight-1);
-  margin-top: var(---spacing-large);
+  margin-top: var(---spacing-medium);
+  margin-bottom: var(---spacing-small);
 }
 
 .markdownContainer p{
   width: 100%;
   font-size: var(---font-size-body);
   color: var(---color-text);
-  margin-bottom: var(---spacing-small);
+  margin-top: 0;
+  margin-bottom: var(---spacing-medium);
 }
 
 .markdownContainer img{
   max-width: 100%;
   width: max-content;
-  margin-bottom: var(---spacing-small);
-}
-
-.markdownContainer .contentImage{
-  margin-bottom: var(---spacing-small);
+  margin-top: 0;
+  margin-bottom: var(---spacing-medium);
 }
 
 .markdownContainer video{
   max-width: 100%;
   max-height: 100vh;
-  margin-bottom: var(---spacing-small);
+  margin-top: 0;
+  margin-bottom: var(---spacing-medium);
 }
 
 .markdownContainer ul{
   width: 100%;
   font-size: var(---font-size-body);
   color: var(---color-text);
-  margin-bottom: var(---spacing-small);
+  margin-top: 0;
+  margin-bottom: var(---spacing-medium);
 }
 
 /* Gallery Styles */
