--- a/src/components/javascriptPageShow/JavascriptPageShow.css
+++ b/src/components/javascriptPageShow/JavascriptPageShow.css
@@ -34,6 +34,7 @@
 
 .markdownContainer img{
   max-width: 100%;
+  max-height: 100vh;
   width: max-content;
   margin-top: 0;
   margin-bottom: var(---spacing-medium);
