--- a/src/components/javascriptPageShow/JavascriptPageShow.css
+++ b/src/components/javascriptPageShow/JavascriptPageShow.css
@@ -40,7 +40,7 @@
   margin-bottom: var(---spacing-medium);
 }
 
-.markdownContainer video{
+.markdownContainer > video{
   max-width: 100%;
   max-height: 100vh;
   margin-top: 0;
