- Reformat and change content on the Meta Application Page - Add space below li elements - Upload Meta CV

--- a/src/components/javascriptPageShow/JavascriptPageShow.css
+++ b/src/components/javascriptPageShow/JavascriptPageShow.css
@@ -96,6 +96,10 @@
   line-height: var(---line-height-body);
 }
 
+.markdownContainer li{
+  margin-bottom: var(---spacing-micro);
+}
+
 .markdownContainer table {
   border-collapse: collapse;
   color: var(---color-text);
